# SeleniumPytestLearn

./: docker-compose.yml  pyproject.toml
allure_cli/: README.MD  cli.py  conts.py  main.py  settings.json  settings.py  utils.py
selenoid/: browsers.json
tests/: conftest.py  environment.properties  settings.json
tests/consts/: drivers.py
tests/eft/profile_center/: const.py  test_profile_center.py
tests/fixtures/: allure.py  driver.py
